# lojinha-do-sergio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
core/: settings.py  urls.py
helpers/: image.py
orders/: admin.py  models.py  urls.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py
products/migrations/: 0001_initial.py
users/: urls.py
