[tool.poetry]
name = "lojinha-do-sergio"
version = "0.1.0"
description = "E-commerce pessoal desenvolvido para fins de aprendizado."
authors = ["Sérgio Dantas <sergiodnts828@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
